--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <p><a href="tel:9199000000">+(91) 9900000000</a></p>
                 <h4>Need Live Support?</h4>
 
-                <p><a href="mailto:info@funngro.com">info@landtwisters.com</a></p>
+                <p><a href="mailto:info@funngro.com">info@funngro.com</a></p>
             </div>
             <div class="items3 f2">
                 <h4>Quick Links</h4>
